--- a/config/example/example_tls_config.yml
+++ b/config/example/example_tls_config.yml
@@ -3,7 +3,7 @@ api_options:
   scheme: http
 
 jobs:
-  - job_name: "zookeeper"
+  - job_name: "zookeeper docker"
     type: "Docker"
     component_name: "zookeeper"
     targets: ['127.0.0.1:8083', '127.0.0.1:8081']
@@ -11,6 +11,14 @@ jobs:
     type: "Service"
     component_name: "simple"
     targets: ['127.0.0.1:8082', '127.0.0.1:8081']
+  - job_name: "zookeeper_docker"
+    type: "Docker"
+    component_name: "test"
+    targets: ['127.0.0.1:8082', '127.0.0.1:8081']
+  - job_name: "zookeeper_service"
+    type: "Service"
+    component_name: "test"
+    targets: ['127.0.0.1:8081']
 
 bots:
   ca_cert: "config/test/certs/ca-cert.pem"
