Add cpu failure and update proto for grpc

--- a/config/test/simple_config.yml
+++ b/config/test/simple_config.yml
@@ -15,6 +15,9 @@ jobs:
     type: "Service"
     component_name: "simple"
     targets: ['127.0.0.1:8081']
+  - job_name: "cpu injection"
+    type: "CPU"
+    targets: ['127.0.0.1:8081']
 
 bots:
   peer_token: 1234
