--- a/config/example/example_simple_config.yml
+++ b/config/example/example_simple_config.yml
@@ -19,5 +19,8 @@ jobs:
     type: "Service"
     component_name: "test"
     targets: ['127.0.0.1:8081']
+  - job_name: "cpu_injection"
+    type: "CPU"
+    targets: ['127.0.0.1:8081']
 
 health_check_report: true
