--- a/config/example/example_tls_config.yml
+++ b/config/example/example_tls_config.yml
@@ -19,6 +19,9 @@ jobs:
     type: "Service"
     component_name: "test"
     targets: ['127.0.0.1:8081']
+  - job_name: "cpu_injection"
+    type: "CPU"
+    targets: ['127.0.0.1:8081']
 
 bots:
   ca_cert: "config/test/certs/ca-cert.pem"
