Add server stop injection

--- a/config/example/example_tls_config.yml
+++ b/config/example/example_tls_config.yml
@@ -22,10 +22,15 @@ jobs:
   - job_name: "cpu_injection"
     type: "CPU"
     targets: ['127.0.0.1:8081']
+  - job_name: "server_injection"
+    type: "Server"
+    targets: ['127.0.0.1:8081']
 
 bots:
   ca_cert: "config/test/certs/ca-cert.pem"
   public_cert: "config/test/certs/server-cert.pem"
   peer_token: 30028dd6-a641-4ac3-91d8-1e214ac5e6f6
 
-health_check_report: true
+health_check:
+  active: false
+  report: false
