--- a/config/test/simple_config.yml
+++ b/config/test/simple_config.yml
@@ -18,8 +18,13 @@ jobs:
   - job_name: "cpu injection"
     type: "CPU"
     targets: ['127.0.0.1:8081']
+  - job_name: "server injection"
+    type: "Server"
+    targets: ['127.0.0.1:8084']
 
 bots:
   peer_token: 1234
 
-health_check_report: true
+health_check:
+  active: true
+  report: true
